Setup screens title alignment fix
It was right aligned, but should have been left aligned.

Reviewed-on: http://review.couchbase.org/78023
Tested-by: Michael Wiederhold <mike@couchbase.com>

--- a/priv/public/ui/app/css/cbui-components.css
+++ b/priv/public/ui/app/css/cbui-components.css
@@ -809,6 +809,13 @@ section.error {
   min-height: 3rem;
 }
 
+.panel-header.flex-left {
+  -webkit-box-pack: start;
+  -webkit-justify-content: flex-start;
+  -ms-flex-pack: start;
+  justify-content: flex-start;
+}
+
 .panel-header h2 {
   color: #fff;
 }
